# matplotlib-extension

./: .gitignore  LICENSE  README.md  pyproject.toml
matplotlib_extension/: article.mplstyle  dark.mplstyle  label_string.py  legend_not_line.mplstyle  legend_right.mplstyle  legend_right.mplsyle  legend_right_small.mplstyle  moke_meas2.mplstyle  pyplot.py  size_w2_0_h1_5.mplstyle  size_w4_0_h1_5.mplstyle  small.mplstyle
tests/: test_label_string.py  test_pyplot.py
