[tool.poetry]
name = "matplotlib-extension"
version = "0.1.0"
description = ""
authors = ["Yukihiro <12211343+y-marui@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dill = "^0.3.8"
fitz = "^0.0.1.dev2"
matplotlib = "^3.8.2"
pymupdf = "^1.23.21"
send2trash = "^1.8.3"
pypdf = "^4.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
